# HorsAVSDK

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE
bindings/objc/: CMakeLists.txt  HorsAVDataBypass.h  HorsAVDataBypass.mm  HorsAVError.h  HorsAVError.mm  HorsAVLogger.h  HorsAVLogger.mm  HorsAVPlayer.h  HorsAVPlayer.mm  HorsAVPlayerConfig.h  HorsAVPlayerConfig.mm  HorsAVRenderer.h  HorsAVRenderer.mm  HorsAVSDK-umbrella.h  HorsAVSDK.h  HorsAVSDK.mm  HorsAVSDK.modulemap  HorsAVTypes.h  HorsAVTypes.mm
bindings/objc/Internal/: HorsAVCallbackBridge.h  HorsAVCallbackBridge.mm  HorsAVPlayerInternal.h
docs/: objc_interface_spec.md  pipeline_design.md
docs/.docs-metadata/: active-task.txt  index.json  session-start.txt
docs/active/: 2026-04-16-task-phase-1-本地音视频文件播放.md  2026-04-20-task-phase-2-network-streaming.md  2026-04-20-task-phase-3-hardware-encoding.md  2026-04-20-task-phase-4-data-bypass.md
docs/context/: architecture_overview.md  architecture_patterns.md  av_sdk_interface_design.md  development_guidelines.md  ffmpeg_sdk_technical_solution.md  git_constraints.md  media_sdk_architecture_design.md  metal_rendering_strategy.md  player_impl_design.md  sdk_architecture_current.md  sdk_interface_design.md  跨平台音视频SDK_PRD.md  跨平台音视频SDK完整技术方案.md
docs/guides/: build_guide.md  contributing.md  quick_start.md
docs/plans/: 2026-04-16-phase1-local-playback.md  2026-04-20-macos-player-demo.md  2026-04-20-phase2-network-streaming.md  2026-04-20-phase3-hardware-encoding.md  2026-04-20-phase4-data-bypass.md
docs/reference/: api_index.md  error_codes.md  performance_targets.md  security_guidelines.md
examples/: CMakeLists.txt
examples/macos_player/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Info.plist  OnlinePlayerViewController.h  OnlinePlayerViewController.mm  PlayerView.h  PlayerView.mm  PlayerWrapper.h  PlayerWrapper.mm  ViewController.h  ViewController.mm  main.m  placeholder.mm
examples/simple_player/: CMakeLists.txt  main.cpp
include/avsdk/: audio_renderer.h  data_bypass.h  decoder.h  demuxer.h  encoder.h  error.h  filter.h  hls_parser.h  hw_decoder.h  logger.h  memory_pool.h  player.h  player_callback.h  player_config.h  renderer.h  retry_policy.h  ring_buffer.h  screenshot.h  types.h  video_recorder.h
include/avsdk/network/: http_client.h
src/core/: CMakeLists.txt  Makefile  cmake_install.cmake
src/core/buffer/: ring_buffer.cpp
src/core/bypass/: data_bypass_manager.cpp  filter_processor.cpp  filter_processor.h  screenshot_handler.cpp  screenshot_handler.h  video_recorder.cpp  video_recorder.h
src/core/decoder/: ffmpeg_decoder.cpp  ffmpeg_decoder.h
src/core/demuxer/: ffmpeg_demuxer.cpp  ffmpeg_demuxer.h  network_demuxer.cpp  network_demuxer.h
src/core/encoder/: ffmpeg_encoder.cpp  ffmpeg_encoder.h
src/core/hls/: hls_parser.cpp
src/core/network/: retry_policy.cpp
src/core/player/: audio_clock.cpp  audio_clock.h  player_impl.cpp  player_impl.h
src/infrastructure/: CMakeLists.txt  Makefile  cmake_install.cmake  error.cpp  logger.cpp  memory_pool.cpp
src/network/: CMakeLists.txt  Makefile  cmake_install.cmake  http_client.cpp
src/platform/: CMakeLists.txt  Makefile  cmake_install.cmake
src/platform/macos/: audio_unit_renderer.h  audio_unit_renderer.mm  metal_renderer.h  metal_renderer.mm  videotoolbox_decoder.h  videotoolbox_decoder.mm
src/platform/macos/shaders/: YUVShader.metal
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  data_bypass_test.cpp  decoder_test.cpp  demuxer_test.cpp  ffmpeg_encoder_test.cpp  filter_processor_test.cpp  hls_parser_test.cpp  network_demuxer_test.cpp  player_bypass_test.cpp  player_test.cpp  retry_policy_test.cpp  ring_buffer_test.cpp  screenshot_handler_test.cpp
tests/infrastructure/: CMakeLists.txt  logger_test.cpp  memory_pool_test.cpp
tests/integration/: player_integration_test.cpp
tests/network/: CMakeLists.txt  http_client_test.cpp
tests/platform/: CMakeLists.txt  audio_unit_renderer_test.mm  metal_renderer_test.mm  videotoolbox_decoder_test.mm
